--- a/PTIRelianceLib.Tests/Properties/Resources.resx
+++ b/PTIRelianceLib.Tests/Properties/Resources.resx
@@ -160,6 +160,9 @@
   <data name="red_bitmap" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\red_bitmap.bmp;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="telemetry_v3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\telemetry.v3.bin;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="white_bitmap" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\white_bitmap.bmp;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
